# dita-skills

./: .gitignore  LICENSE  README.md  pyproject.toml  specification.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
context-setup/: SKILL.md
dita-best-practices/: SKILL.md
dita-best-practices/references/: RULES.md
dita-best-practices/scripts/: best_practices.py
ditaval-helper/: SKILL.md
ditaval-helper/references/: RULES.md
ditaval-helper/scripts/: ditaval_helper.py
error-handling/: SKILL.md
generate-bookmap/: SKILL.md
generate-bookmap/scripts/: generate_bookmap.py
generate-dita-topic/: SKILL.md
generate-dita-topic/scripts/: generate_dita_topic.py
generate-ditamap/: SKILL.md
generate-ditamap/scripts/: generate_ditamap.py
generate-keyrefs/: SKILL.md
generate-keyrefs/references/: KEYREFS.md
generate-keyrefs/scripts/: generate_keyrefs.py
generate-keyrefs/tests/: test_generate_keyrefs.py
keyspace-debug/: SKILL.md
map-resolve/: SKILL.md
pdf-to-dita/: SKILL.md
pdf-to-dita/references/: PIPELINE.md
pdf-to-dita/scripts/: chunk_to_dita.py  extract_pdf.py  optimize_dita.py  pipeline.py  validate_output.py
pdf-to-dita/tests/: test_pipeline.py
refactor-dita-content/: SKILL.md
refactor-dita-content/references/: REFERENCE.md
review-dita-guide/: SKILL.md
review-dita-guide/references/: RULES.md
review-dita-guide/scripts/: review_dita_guide.py
scripts/: install_skills.py
tests/: conftest.py  test_best_practices.py  test_ditaval_helper.py  test_generate_dita_topic.py  test_generate_maps.py  test_install_skills.py  test_review_dita_guide.py  test_validate_bookmap.py  test_validate_dita_topic.py  test_validate_ditamap.py  test_xslt_patterns.py
validate-bookmap/: SKILL.md
validate-bookmap/references/: RULES.md
validate-bookmap/scripts/: validate_bookmap.py
validate-dita-topic/: SKILL.md
validate-dita-topic/references/: RULES.md
validate-dita-topic/scripts/: validate_dita_topic.py
validate-ditamap/: SKILL.md
validate-ditamap/references/: RULES.md
validate-ditamap/scripts/: validate_ditamap.py
visitor-extend/: SKILL.md
xslt-dita-helper/: SKILL.md
xslt-dita-helper/assets/: xslt-patterns.xsl
xslt-dita-helper/references/: CLASS-ATTRIBUTES.md  DITA-OT-PLUGIN.md
