[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

# ---------------------------------------------------------------------------
# Project metadata
# ---------------------------------------------------------------------------
[project]
name = "dita-skills"
version = "0.1.0"
description = "AI-powered skills for DITA 1.3 XML authoring and validation"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

# Production scripts have no third-party dependencies (stdlib only).
dependencies = []

[project.optional-dependencies]
# Test-only: lxml enables XSLT transformation tests in test_xslt_patterns.py
test = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "lxml>=4.9",
]
# PDF extraction (Stage 1 of pdf-to-dita pipeline)
pdf = [
    "pdfplumber>=0.10",
]
# Install all optional groups
all = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "lxml>=4.9",
    "pdfplumber>=0.10",
]

# ---------------------------------------------------------------------------
# Tool: pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths   = ["tests", "generate-keyrefs/tests", "pdf-to-dita/tests"]
python_files  = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--tb=short",
    "--strict-markers",
]

# ---------------------------------------------------------------------------
# Tool: coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = [
    "validate-dita-topic/scripts",
    "validate-ditamap/scripts",
    "validate-bookmap/scripts",
    "generate-dita-topic/scripts",
    "generate-ditamap/scripts",
    "generate-bookmap/scripts",
    "dita-best-practices/scripts",
    "ditaval-helper/scripts",
    "review-dita-guide/scripts",
    "generate-keyrefs/scripts",
    "pdf-to-dita/scripts",
    "scripts",
]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered  = false
fail_under    = 70

[tool.coverage.paths]
# Normalise paths across OS (important for the CI matrix)
source = [
    ".",
    "/home/runner/work/dita-skills/dita-skills",
]
